# recipe-llm-project

./: .gitignore  README.md
data/: .lakefs_ref.yaml
services/: .dockerignore  pyproject.toml
services/api/: Dockerfile  routes.py
services/auth/: Dockerfile
